Alignemnt Fix

--- a/donor-registry/src/styles.scss
+++ b/donor-registry/src/styles.scss
@@ -1049,7 +1049,9 @@ label {
 }
 
 
-
+.mt-10{
+    margin-top: 12px !important;
+}
 
 .footer {
     display: none !important;
